[TASK] Remove the deprecated  variable wich was replaced by the SASS-Script variable

--- a/Resources/Private/Sass/Base/_Base.scss
+++ b/Resources/Private/Sass/Base/_Base.scss
@@ -1,7 +1,7 @@
 /*!
  * High-level wrapper elements
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Base.scss
  */
 
