--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for forms and inputs
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Forms.scss
  */
 
