--- a/Resources/Private/Sass/Base/_Links.scss
+++ b/Resources/Private/Sass/Base/_Links.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for anchor tags
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Links.scss
  */
 
