--- a/Resources/Private/Sass/Base/_Tables.scss
+++ b/Resources/Private/Sass/Base/_Tables.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling and extended classes for tables
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Tables.scss
  */
 
