--- a/Resources/Private/Sass/Base/_Typography.scss
+++ b/Resources/Private/Sass/Base/_Typography.scss
@@ -2,7 +2,7 @@
  * Basic styling for all typographic related elements e.g.
  * <b>, <sup>, <i>
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Typography.scss
  */
 
