--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -2,7 +2,7 @@
  * Declarations wich should be put at the top of the document e.g.
  * @font-face declarations and CSS viewports
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Head.scss
  */
 
