--- a/Resources/Private/Sass/Generic/_Normalize.scss
+++ b/Resources/Private/Sass/Generic/_Normalize.scss
@@ -1,7 +1,7 @@
 /*!
  * A cut-down version of normalize.css
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Normalize.scss
  * @author Nicolas Gallagher
  * @link http://necolas.github.com/normalize.css/
