--- a/Resources/Private/Sass/Generic/_T3General.scss
+++ b/Resources/Private/Sass/Generic/_T3General.scss
@@ -1,7 +1,7 @@
 /*!
  * Styling for typo3 related classes
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_T3General.scss
  */
 
