--- a/Resources/Private/Sass/Objects/_Grid.scss
+++ b/Resources/Private/Sass/Objects/_Grid.scss
@@ -1,7 +1,7 @@
 /*!
  * Grid object wich makes use of the width classes in generic/_widths.scss
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Objects/_Grid.scss
  */
 
