--- a/Resources/Private/Sass/_Settings/_All.scss
+++ b/Resources/Private/Sass/_Settings/_All.scss
@@ -1,7 +1,7 @@
 //
 // Combines all SASS related settings into one @import
 //
-// @package #{$package_name()}
+// @package #{ext_directory()}
 // @path  _Settings/_All.sass
 //
 
