--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -1,7 +1,7 @@
 //
 // SASS Functions
 //
-// @package #{$package_name()}
+// @package #{ext_directory()}
 // @path  _Settings/_Functions.sass
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#function_directives
 //
