--- a/Resources/Private/Sass/_Settings/_MediaQueries.scss
+++ b/Resources/Private/Sass/_Settings/_MediaQueries.scss
@@ -1,7 +1,7 @@
 //
 // Media-Query SASS Mixins
 //
-// @package #{$package_name()}
+// @package #{ext_directory()}
 // @path _Settings/_MediaQueries.scss
 // @author Rafal Bromirski <http://paranoida.com/>, Tyll Weiß <inkdpixels@gmail.com>
 // @license MIT <http://opensource.org/licenses/MIT>
