--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for headings and sub-headings
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Headings.scss
  */
 
