--- a/Resources/Private/Sass/Base/_Lists.scss
+++ b/Resources/Private/Sass/Base/_Lists.scss
@@ -1,7 +1,7 @@
 /*!
  * Basic styling for lists and definition elements
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Lists.scss
  */
 
