--- a/Resources/Private/Sass/Base/_Media.scss
+++ b/Resources/Private/Sass/Base/_Media.scss
@@ -2,7 +2,7 @@
  * Basic styling for media elements e.g.
  * <img>, <video>, <svg>, <augio>
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Base/_Media.scss
  */
 
