--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -1,7 +1,7 @@
 /*!
  * Gernerated classes for brand related styling
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Brand.scss
  */
 
