--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -1,7 +1,7 @@
 /*!
  * Helper Classes from the boilerplate project
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Helper.scss
  * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
  */
