--- a/Resources/Private/Sass/Generic/_Print.scss
+++ b/Resources/Private/Sass/Generic/_Print.scss
@@ -1,7 +1,7 @@
 /*!
  * Print styles - Inlined to avoid another HTTP connection
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Print.scss
  * @link http://h5bp.com/r
  */
