--- a/Resources/Private/Sass/Generic/_Widths.scss
+++ b/Resources/Private/Sass/Generic/_Widths.scss
@@ -3,7 +3,7 @@
  * abstractions like the grid system, from
  * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Generic/_Widths.scss
  * @license Apache License, Version 2.0.
  */
