--- a/Resources/Private/Sass/Objects/_Navigations.scss
+++ b/Resources/Private/Sass/Objects/_Navigations.scss
@@ -2,7 +2,7 @@
  * A modified version of the navigation object from
  * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
- * @package #{$package_name()}
+ * @package #{ext_directory()}
  * @path Objects/_Navigations.scss
  * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
