--- a/Resources/Private/Sass/_Settings/_Defaults.scss
+++ b/Resources/Private/Sass/_Settings/_Defaults.scss
@@ -1,7 +1,7 @@
 //
 // Variables, variables, variables!
 //
-// @package #{$package_name()}
+// @package #{ext_directory()}
 // @path _Settings/_Defaults.sass
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 //
@@ -10,7 +10,7 @@
 // =============================================================================
 // Project settings
 // =============================================================================
-$template-path:         "typo3conf/ext/#{$package_name}/" !default;
+$template-path:         "typo3conf/ext/#{ext_directory()}/" !default;
 $global-border-box:     true !default;
 $responsive:            false !default;
 
