--- a/Resources/Private/Sass/_Settings/_Mixins.scss
+++ b/Resources/Private/Sass/_Settings/_Mixins.scss
@@ -1,7 +1,7 @@
 //
 // SASS Mixins
 //
-// @package #{$package_name()}
+// @package #{ext_directory()}
 // @path _settings/_Mixins.scss
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
 //
