--- a/Resources/Private/Sass/_Settings/_Mixins.scss
+++ b/Resources/Private/Sass/_Settings/_Mixins.scss
@@ -250,11 +250,11 @@
 //
 // @param value
 // @returns
-//   -webkit-hyphens: $arg;
-//      -moz-hyphens: $arg;
-//       -ms-hyphens: $arg;
-//        -o-hyphens: $arg;
-//           hyphens: $arg;
+//   -webkit-hyphens: break-word;
+//      -moz-hyphens: break-word;
+//       -ms-hyphens: break-word;
+//        -o-hyphens: break-word;
+//           hyphens: break-word;
 //
 // @example
 //   .selector {
