[DOCS] Add a missing explanation for the custom variables file import

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -15,6 +15,7 @@
 // =============================================================================
 // 1. "compass/css3"            - All compass CSS3 mixins and functions
 // 2. "_Settings/_All"          - Mixins, functions and default vars from t3b_template
+// 3. "_Variables"              - Customized project variables
 // =============================================================================
 @import "compass/css3",
         "_Settings/_All",
