[MISC] Rename the main content column in the default Page-Template to 'Content'

--- a/Resources/Private/Templates/Page/Page.html
+++ b/Resources/Private/Templates/Page/Page.html
@@ -8,7 +8,7 @@
 		<flux:flexform id="standard-page" label="Standard page">
 			<flux:flexform.grid>
 				<flux:flexform.grid.row>
-					<flux:flexform.grid.column colPos="0" name="PageContent" />
+					<flux:flexform.grid.column colPos="0" name="Content" />
 				</flux:flexform.grid.row>
 			</flux:flexform.grid>
 		</flux:flexform>
