[MISC] Fix a spelling mistake

--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -1,5 +1,5 @@
 /*!
- * Declarations wich should be put at the top of the document e.g.
+ * Declarations which should be put at the top of the document e.g.
  * @font-face declarations and CSS viewports
  *
  * @package #{ext_directory()}
