--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -25,7 +25,7 @@
 // =============================================================================
 // Generic
 // =============================================================================
-// 1. "Generic/_Head"           - Declarations wich should be put at the top of the document
+// 1. "Generic/_Head"           - Declarations which should be put at the top of the document
 // 2. "Generic/_Normalize"      - Nicolas Gallagher's normalize.css
 // 3. "Generic/_Widths"         - Human readable width classes from inuit.css
 // 4. "Generic/_T3General"      - TYPO3 related classes
