--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -48,7 +48,7 @@ $end: right !default;
 // Color-Adjust
 // =============================================================================
 // @description
-// Adjust a color based on the lightness wich is passed as a second parameter
+// Adjust a color based on the lightness which is passed as a second parameter
 // @author necolas
 // @link https://github.com/necolas/suit
 //
