--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -73,7 +73,7 @@ $bold:                  700;
 $regular:               400;
 $light:                 300;
 
-// Base font settings wich will be set on the '<body>' element,
+// Base font settings which will be set on the '<body>' element,
 // '$base-font-size' and '$base-line-height' are pixel values.
 $base-font-size:        16;
 $base-line-height:      24;
@@ -113,7 +113,7 @@ $h6-size:               14;
 // Layout
 // =============================================================================
 // Basic layout width (in pixels) - will be set on the '.site-wrapper' class
-// The value is wrapped in the relative-size function wich converts pixels into em's.
+// The value is wrapped in the relative-size function which converts pixels into em's.
 $layout-width:          rs(960);
 
 // Is this layout centered? If set to 'true' the '.wrapper' class will be centered.
@@ -122,7 +122,7 @@ $centered-layout:       true;
 // Inner spacing for all grid-items.
 $column-gutter:         20px;
 
-// The background wich will be set on the <body> element, you can also pass in
+// The background which will be set on the <body> element, you can also pass in
 // other arguments e.g.:
 // $body-background: image-url('body-bg.gif') top left repeat-x #fff;
 $body-background:       #fff;
