[DOCS] Add an explanational comment in the Debug.scss file-header

--- a/Resources/Private/Sass/Generic/_Debug.scss
+++ b/Resources/Private/Sass/Generic/_Debug.scss
@@ -1,5 +1,5 @@
 /*!
- * Debug Code
+ * Debug code wich applies if the compass env is set to 'development'
  *
  * @package #{ext_directory()}
  * @path Generic/_Debug.scss
