[TASK] Make sure all file-headers won't be displayed in the compiled stylesheet with production settings

--- a/Resources/Private/Sass/Generic/_Debug.scss
+++ b/Resources/Private/Sass/Generic/_Debug.scss
@@ -1,5 +1,5 @@
 @if compass-env() == 'development' {
-/*!
+/*
  * Debug code wich applies if the compass env is set to 'development'
  *
  * @package #{ext_directory()}
