--- a/Resources/Private/Sass/Generic/_Widths.scss
+++ b/Resources/Private/Sass/Generic/_Widths.scss
@@ -1,4 +1,4 @@
-/*!
+/*
  * Sizes which are used in conjunction with other objects and
  * abstractions like the grid system, from
  * inuit.css <https://github.com/csswizardry/inuit.css/>
