--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -21,15 +21,10 @@
   background-color: transparent;
   border: 0;
   overflow: hidden;
+  font: 0/0 a;
   @if $legacy-support-for-ie7 {
     /* IE 6/7 fallback */
     *text-indent: -9999px;
-  }
-  &:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
   }
 }
 
