--- a/Resources/Private/Sass/Generic/_Normalize.scss
+++ b/Resources/Private/Sass/Generic/_Normalize.scss
@@ -103,6 +103,15 @@ textarea {
 }
 
 /**
+ * Re-apply the `font-weight` to avoid modifying the default UX, and because
+ * the default cannot be changed in Chrome and Safari on OS X.
+ */
+
+optgroup {
+    font-weight: bold;
+}
+
+/**
  * Addresses FF3/4 setting `line-height` on `input` using `!important` in the
  * UA stylesheet.
  */
