--- a/Resources/Private/Sass/Base/_Typography.scss
+++ b/Resources/Private/Sass/Base/_Typography.scss
@@ -100,6 +100,7 @@ blockquote {
 /* =============================================================================
 $ Seperators
 ================================================================================ */
+%horizontal-ruler,
 hr {
 	/**
 	* Address differences between Firefox and other browsers.
