--- a/Resources/Private/Sass/Generic/_T3General.scss
+++ b/Resources/Private/Sass/Generic/_T3General.scss
@@ -9,8 +9,14 @@
 /* =============================================================================
 $ CSC-Frames
 ================================================================================ */
-.csc-frame-rulerBefore { border-top: 1px $basic-border-style $basic-border-color; }
-.csc-frame-rulerAfter { border-bottom: 1px $basic-border-style $basic-border-color; }
+.csc-frame-rulerBefore:before {
+	content: '';
+	@extend %horizontal-ruler;
+}
+.csc-frame-rulerAfter:after {
+	content: '';
+	@extend %horizontal-ruler;
+}
 
 .csc-frame-indent { padding: 0 10%; }
 .csc-frame-indent3366 { padding-left: 33.333%; }
