--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -13,3 +13,9 @@
 	</div>
 </main>
 <f:render partial="Page/Footer" arguments="{_all}" />
+
+
+<script type="text/javascript"
+	src="typo3conf/ext/<!= pkg.name !>/Resources/Private/Javascripts/Libaries/RequireJS/require.js"
+	data-main="typo3conf/ext/<!= pkg.name !>/Resources/Public/Javascripts/Main">
+</script>
