--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -21,17 +21,18 @@
 	/* =============================================================================
 	$ Border-Box
 	================================================================================ */
-	*, *:before, *:after {
-		@include box-sizing(border-box);
-		@if $legacy-support-for-ie7 {
-			/**
-			 * Cross browser Border-box
-			 *
-			 * Includes boxsizing.htc behavior for IE7 and below
-			 * The URL has to be relative to the HTML Doc
-			 * https://github.com/Schepp/box-sizing-polyfill
-			 */
-			*behavior: url('#{$template-path}Ressource/Public/BoxSizing.htc');
-		}
+	// We are using a split border-box setting to improve performance - https://github.com/mdo/css-perf#box-sizing-resets
+	* {
+		-webkit-box-sizing: border-box;
+			 -moz-box-sizing: border-box;
+						box-sizing: border-box;
+		@if $legacy-support-for-ie7 { *behavior: url('#{$template-path}Ressource/Public/BoxSizing.htc'); }
+	}
+	*:before,
+	*:after {
+		-webkit-box-sizing: border-box;
+			 -moz-box-sizing: border-box;
+						box-sizing: border-box;
+		@if $legacy-support-for-ie7 { *behavior: url('#{$template-path}Ressource/Public/BoxSizing.htc'); }
 	}
 }
