[TASK] Use the camelCase scheme for single purpose classes

--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -5,8 +5,8 @@
 
 
 <f:render partial="Page/Header" arguments="{_all}" />
-<main class="site-content" role="main">
-	<div class="site-wrapper">
+<main class="siteContent" role="main">
+	<div class="siteWrapper">
 		<!-- TYPO3SEARCH_begin -->
 		<f:render section="Main" arguments="{_all}" />
 		<!-- TYPO3SEARCH_end -->
