--- a/Resources/Private/Partials/Page/Footer.html
+++ b/Resources/Private/Partials/Page/Footer.html
@@ -1,5 +1,5 @@
-<footer class="site-footer" role="contentinfo">
-	<div class="site-wrapper">
+<footer class="siteFooter" role="contentinfo">
+	<div class="siteWrapper">
 
 	</div>
 </footer>
