--- a/Resources/Private/Partials/Page/Header.html
+++ b/Resources/Private/Partials/Page/Header.html
@@ -1,5 +1,5 @@
-<header class="site-header" role="banner">
-	<div class="site-wrapper">
+<header class="siteHeader" role="banner">
+	<div class="siteWrapper">
 
 	</div>
 </header>
