--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -10,8 +10,8 @@
 $ Text inputs, checkboxes and other form elements
 ================================================================================ */
 /* ======================== Textinputs ========================= */
-%text-input,
-.text-input,
+%textInput,
+.textInput,
 textarea {
 	height: $text-input-height;
 	padding: .2em .4em;
