--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -17,7 +17,7 @@
  * For image replacement
  */
 .ir,
-.image-replacement {
+.imageReplacement {
 	background-color: transparent;
 	border: 0;
 	overflow: hidden;
