--- a/Resources/Private/Sass/_Styles.scss
+++ b/Resources/Private/Sass/_Styles.scss
@@ -9,6 +9,6 @@
 /* =============================================================================
 $ High level wrapper and elements
 ================================================================================ */
-.site-header { }
-.site-content { }
-.site-footer { }
+.siteHeader { }
+.siteContent { }
+.siteFooter { }
