[MISC] Rename all SASS Object files into the plain form

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -69,8 +69,8 @@
 // 2. "Objects/_Navigations"    - Navigation object and it's modifiers
 // 3. "Objects/_Grid"           - Grid object and it's modifiers
 // =============================================================================
-@import "Objects/_Buttons",
-        "Objects/_Navigations",
+@import "Objects/_Button",
+        "Objects/_Navigation",
         "Objects/_Grid";
 
 
