[MISC] Move the .form--inline abstraction into its own OCSS file

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -66,10 +66,12 @@
 // Objects
 // =============================================================================
 // 1. "Objects/_Buttons"        - Button object and it's modifiers
-// 2. "Objects/_Navigations"    - Navigation object and it's modifiers
-// 3. "Objects/_Grid"           - Grid object and it's modifiers
+// 2. "Objects/_Form"           - Abstractions of the '<form>' element
+// 3. "Objects/_Navigations"    - Navigation object and it's modifiers
+// 4. "Objects/_Grid"           - Grid object and it's modifiers
 // =============================================================================
 @import "Objects/_Button",
+	"Objects/_Form",
         "Objects/_Navigation",
         "Objects/_Grid";
 
