[MISC] Rename the 'vhs' namespace to 'v' to match the fedext styleguide

--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -1,7 +1,7 @@
-{namespace vhs=Tx_Vhs_ViewHelpers}
+{namespace v=Tx_Vhs_ViewHelpers}
 
-<vhs:asset.style  name="BaseStylesheet" path="EXT:<!= pkg.name !>/Resources/Public/Stylesheets/Main.css" standalone="1" />
-<vhs:asset.script name="Modernizr" path="EXT:<!= pkg.name !>/Resources/Private/Javascripts/Libaries/modernizr/modernizr.js" allowMoveToFooter="0" />
+<v:asset.style  name="BaseStylesheet" path="EXT:<!= pkg.name !>/Resources/Public/Stylesheets/Main.css" standalone="1" />
+<v:asset.script name="Modernizr" path="EXT:<!= pkg.name !>/Resources/Private/Javascripts/Libaries/modernizr/modernizr.js" allowMoveToFooter="0" />
 
 
 <f:render partial="Page/Header" arguments="{_all}" />
