[MISC] Use the meta vhs viewHelper for the viewport meta-tag instead of a TypoScript setup

--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -1,5 +1,7 @@
 {namespace v=Tx_Vhs_ViewHelpers}
 
+<v:page.header.meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <v:asset.style  name="BaseStylesheet" path="EXT:<!= pkg.name !>/Resources/Public/Stylesheets/Main.css" standalone="1" />
 <v:asset.script name="Modernizr" path="EXT:<!= pkg.name !>/Resources/Private/Javascripts/Libaries/modernizr/modernizr.js" allowMoveToFooter="0" />
 
