[MISC] Set the 'development' banner to 'pointer-events: none;'

--- a/Resources/Private/Sass/Generic/_Debug.scss
+++ b/Resources/Private/Sass/Generic/_Debug.scss
@@ -19,6 +19,7 @@ body::before {
 	content: 'Development';
 	border: 2px solid #000;
 	background: red;
+	pointer-events: none;
 	text-transform: uppercase;
 	color: #000;
 	font-weight: $bold;
