[TASK] Remove the compass dependency from the base

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -20,7 +20,7 @@ textarea {
 	background: $content-background;
 	border: $text-input-border;
 	border-radius: $text-input-borderRadius;
-	@include box-shadow($text-input-boxShadow);
+	box-shadow: $text-input-boxShadow;
 
 	@include font-size($text-input-fontSize);
 	color: $text-input-color;
