[TASK] Move the wrapper elements for the siteContent area into the template corresponding files

--- a/Resources/Private/Templates/Page/Page.html
+++ b/Resources/Private/Templates/Page/Page.html
@@ -15,6 +15,12 @@
 	</f:section>
 
 	<f:section name="Main">
-		<v:page.content.render column="0" />
+		<main class="siteContent" role="main">
+			<div class="siteWrapper">
+				<!-- TYPO3SEARCH_begin -->
+				<v:page.content.render column="0" />
+				<!-- TYPO3SEARCH_end -->
+			</div>
+		</main>
 	</f:section>
 </div>
