[DOCS] Fix a typo

--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -116,7 +116,7 @@ $h6-size:               14;
 // =============================================================================
 // Layout
 // =============================================================================
-// Basic layout width (in pixels) - will be set on the '.site-wrapper' class
+// Basic layout width (in pixels) - will be set on the '.siteWrapper' class
 // The value is wrapped in the relative-size function which converts pixels into em's.
 $layout-width:          rs(960);
 
