--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -155,16 +155,15 @@ $basic-border-style:    solid;
 // Forms
 // =============================================================================
 // The height of the element itself.
-$text-input-height:     $base-line-height +px;
-
-// The basic bottom-margin on all text-inputs.
-$text-input-spacing:    $half-spacing;
-
-$text-input-border:     1px solid $basic-border-color;
-$text-input-borderRadius: $brand-border-radius;
-$text-input-boxShadow:  inset 0 1px 1px rgba(#000, 0.075);
-$text-input-fontSize:   14;
-$text-input-color:      lighten($base-text-color, 5%);
+$textInput: (
+	height: $base-line-height +px,
+	bottomSpacing: $half-spacing,
+	border: 1px solid $basic-border-color,
+	borderRadius: $brand-border-radius,
+	boxShadow: inset 0 1px 1px rgba(#000, 0.075),
+	fontSize: 14,
+	color: lighten($base-text-color, 5%)
+);
 
 
 // =============================================================================
